# SlicerExtraMarkups

./: CMakeLists.txt  README.md
Disk/: CMakeLists.txt  README.md  qSlicerDiskModule.cxx  qSlicerDiskModule.h
Disk/Logic/: vtkSlicerDiskLogic.cxx  vtkSlicerDiskLogic.h
Disk/MRML/: CMakeLists.txt  vtkMRMLMarkupsDiskNode.cxx  vtkMRMLMarkupsDiskNode.h  vtkMRMLMeasurementDisk.cxx  vtkMRMLMeasurementDisk.h
Disk/VTKWidgets/: CMakeLists.txt  vtkSlicerDiskRepresentation2D.cxx  vtkSlicerDiskRepresentation2D.h  vtkSlicerDiskRepresentation3D.cxx  vtkSlicerDiskRepresentation3D.h  vtkSlicerDiskWidget.cxx  vtkSlicerDiskWidget.h
Disk/Widgets/: CMakeLists.txt  qMRMLMarkupsDiskWidget.cxx  qMRMLMarkupsDiskWidget.h
Disk/Widgets/Resources/UI/: qMRMLMarkupsDiskOptionsWidget.ui  qMRMLMarkupsDiskWidget.ui
Label/: CMakeLists.txt  README.md  qSlicerLabelModule.cxx  qSlicerLabelModule.h
Label/Logic/: vtkSlicerLabelLogic.cxx  vtkSlicerLabelLogic.h
Label/MRML/: CMakeLists.txt  vtkMRMLMarkupsLabelJsonStorageNode.cxx  vtkMRMLMarkupsLabelJsonStorageNode.h  vtkMRMLMarkupsLabelJsonStorageNode_Private.h  vtkMRMLMarkupsLabelNode.cxx  vtkMRMLMarkupsLabelNode.h
Label/Resources/: qSlicerLabelModule.qrc
Label/VTKWidgets/: CMakeLists.txt  vtkSlicerLabelRepresentation2D.cxx  vtkSlicerLabelRepresentation2D.h  vtkSlicerLabelRepresentation3D.cxx  vtkSlicerLabelRepresentation3D.h  vtkSlicerLabelWidget.cxx  vtkSlicerLabelWidget.h
Label/Widgets/: CMakeLists.txt  qMRMLMarkupsLabelWidget.cxx  qMRMLMarkupsLabelWidget.h
Label/Widgets/Resources/UI/: qMRMLMarkupsLabelOptionsWidget.ui  qMRMLMarkupsLabelWidget.ui
Ring/: CMakeLists.txt  README.md  qSlicerRingModule.cxx  qSlicerRingModule.h
Ring/Logic/: vtkSlicerRingLogic.cxx  vtkSlicerRingLogic.h
Ring/MRML/: CMakeLists.txt  vtkMRMLMarkupsRingNode.cxx  vtkMRMLMarkupsRingNode.h  vtkMRMLMeasurementRing.cxx  vtkMRMLMeasurementRing.h  vtkMRMLMeasurementRingArea.cxx  vtkMRMLMeasurementRingArea.h
Ring/VTKWidgets/: CMakeLists.txt  vtkSlicerRingRepresentation2D.cxx  vtkSlicerRingRepresentation2D.h  vtkSlicerRingRepresentation3D.cxx  vtkSlicerRingRepresentation3D.h  vtkSlicerRingWidget.cxx  vtkSlicerRingWidget.h
Ring/Widgets/: CMakeLists.txt  qMRMLMarkupsRingWidget.cxx  qMRMLMarkupsRingWidget.h
Ring/Widgets/Resources/UI/: qMRMLMarkupsRingOptionsWidget.ui  qMRMLMarkupsRingWidget.ui
Shape/: CMakeLists.txt  README.md  qSlicerShapeModule.cxx  qSlicerShapeModule.h
Shape/Logic/: vtkSlicerShapeLogic.cxx  vtkSlicerShapeLogic.h
Shape/MRML/: CMakeLists.txt  vtkMRMLMarkupsShapeJsonStorageNode.cxx  vtkMRMLMarkupsShapeJsonStorageNode.h  vtkMRMLMarkupsShapeJsonStorageNode_Private.h  vtkMRMLMarkupsShapeNode.cxx  vtkMRMLMarkupsShapeNode.h  vtkMRMLMeasurementShape.cxx  vtkMRMLMeasurementShape.h
Shape/Resources/: qSlicerShapeModule.qrc
Shape/VTKWidgets/: CMakeLists.txt  vtkSlicerShapeRepresentation2D.cxx  vtkSlicerShapeRepresentation2D.h  vtkSlicerShapeRepresentation3D.cxx  vtkSlicerShapeRepresentation3D.h  vtkSlicerShapeWidget.cxx  vtkSlicerShapeWidget.h
Shape/Widgets/: CMakeLists.txt  qMRMLMarkupsShapeWidget.cxx  qMRMLMarkupsShapeWidget.h
Shape/Widgets/Resources/UI/: qMRMLMarkupsShapeOptionsWidget.ui  qMRMLMarkupsShapeWidget.ui
Sphere/: CMakeLists.txt  README.md  qSlicerSphereModule.cxx  qSlicerSphereModule.h
Sphere/Logic/: vtkSlicerSphereLogic.cxx  vtkSlicerSphereLogic.h
Sphere/MRML/: CMakeLists.txt  vtkMRMLMarkupsSphereNode.cxx  vtkMRMLMarkupsSphereNode.h  vtkMRMLMeasurementSphere.cxx  vtkMRMLMeasurementSphere.h
Sphere/VTKWidgets/: CMakeLists.txt  vtkSlicerSphereRepresentation2D.cxx  vtkSlicerSphereRepresentation2D.h  vtkSlicerSphereRepresentation3D.cxx  vtkSlicerSphereRepresentation3D.h  vtkSlicerSphereWidget.cxx  vtkSlicerSphereWidget.h
Sphere/Widgets/: CMakeLists.txt  qMRMLMarkupsSphereWidget.cxx  qMRMLMarkupsSphereWidget.h
Sphere/Widgets/Resources/UI/: qMRMLMarkupsSphereOptionsWidget.ui  qMRMLMarkupsSphereWidget.ui
StenosisMeasurement3D/: CMakeLists.txt  README.md  StenosisMeasurement3D.md  qSlicerStenosisMeasurement3DModule.cxx  qSlicerStenosisMeasurement3DModuleWidget.cxx  qSlicerStenosisMeasurement3DModuleWidget.h
StenosisMeasurement3D/Logic/: vtkSlicerStenosisMeasurement3DLogic.cxx  vtkSlicerStenosisMeasurement3DLogic.h
StenosisMeasurement3D/Resources/UI/: qSlicerStenosisMeasurement3DFooBarWidget.ui  qSlicerStenosisMeasurement3DModuleWidget.ui
StenosisMeasurement3D/Widgets/: qSlicerStenosisMeasurement3DFooBarWidget.cxx  qSlicerStenosisMeasurement3DFooBarWidget.h
